--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
       <a href="index.html" class="logo d-flex align-items-center">
         <img src="assets/img/logo.png" alt="">
-        <span>OM JAY LOGISTICS</span>
+        <span>OM JAY</span>
       </a>
 
       <nav id="navbar" class="navbar">
